log
Fri Apr  8 11:32:16 HSP 2022: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
3df1bb6
Fri Apr  8 12:09:55 HSP 2022: 
 hashmap.c | 30 ++++++++++++++++++++++++++++++
 1 file changed, 30 insertions(+)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:55:9: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
         while(flag=1)
         ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
881d811
Fri Apr  8 12:10:41 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
eb0f645
Fri Apr  8 18:12:43 HSP 2022: 
 hashmap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  2|5
total_score: 20/70
9c664fd
Fri Apr  8 18:32:23 HSP 2022: 
 hashmap.c | 13 ++++---------
 1 file changed, 4 insertions(+), 9 deletions(-)
 tests:  5|4
total_score: 30/70
fac6836
Fri Apr  8 20:04:54 HSP 2022: 
 hashmap.c | 22 ++++++++++++++++++++--
 1 file changed, 20 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:101:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     while(flag=1)
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
6553cc0
Fri Apr  8 20:05:27 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:120:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
8407961
Fri Apr  8 20:07:36 HSP 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 30/70
9d441fc
Fri Apr  8 20:34:38 HSP 2022: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:123:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
c0375d9
Fri Apr  8 20:38:00 HSP 2022: 
 hashmap.c | 16 ++++++++++------
 1 file changed, 10 insertions(+), 6 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:94:11: error: unused variable 'dato' [-Werror=unused-variable]
     Pair *dato =searchMap(map,key);
           ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
a04b02c
Fri Apr  8 20:38:53 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
858a843
Fri Apr  8 20:40:37 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:127:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
c6e216f
Fri Apr  8 20:44:34 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:125:16: error: return makes pointer from integer without a cast [-Werror=int-conversion]
         return posicion;
                ^~~~~~~~
hashmap.c:127:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
86188bc
Fri Apr  8 20:45:42 HSP 2022: 
 hashmap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:98:20: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
     long *posicion=hash(key,map->capacity);
                    ^~~~
hashmap.c:110:25: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
                 posicion=(*posicion+1)%map->capacity;
                         ^
hashmap.c:114:29: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
                 map->current=posicion;
                             ^
hashmap.c:125:16: error: return makes pointer from integer without a cast [-Werror=int-conversion]
         return *posicion;
                ^~~~~~~~~
hashmap.c:127:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
bf2f180
Fri Apr  8 20:48:14 HSP 2022: 
 hashmap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:125:16: error: return makes pointer from integer without a cast [-Werror=int-conversion]
         return posicion;
                ^~~~~~~~
hashmap.c:127:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
995a050
Fri Apr  8 20:49:55 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:127:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
fce0405
Fri Apr  8 20:51:15 HSP 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 30/70
a894410
Fri Apr  8 20:55:48 HSP 2022: 
 hashmap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:127:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
fec1940
Fri Apr  8 21:13:48 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:127:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
ef87443
Fri Apr  8 21:25:51 HSP 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:128:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
908e611
Fri Apr  8 21:41:19 HSP 2022: 
 hashmap.c | 24 ++++++++++--------------
 1 file changed, 10 insertions(+), 14 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:124:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
be134c7
Fri Apr  8 21:50:44 HSP 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|3
total_score: 40/70
f21cbee
Sat Apr  9 10:42:23 HSP 2022: 
 hashmap.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
 tests:  0|0
1d5f57f
Sat Apr  9 10:42:53 HSP 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
b09d5a9
Sat Apr  9 10:50:56 HSP 2022: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  11|2
total_score: 50/70
3208998
